traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value GetX
      setPos(GetX()+1,0)
             ^TraversalByColumn:6: error: not found: value GetX
      setPos(GetX(),GetY+1)
             ^TraversalByColumn:6: error: not found: value GetY
      setPos(GetX(),GetY+1)
                    ^