traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while(!estPosFinale()){
    if(getY()==6){
      setPos(GetX()+1,0)
    }
    else{
      setPos(GetX(),GetY+1)
    }
  }
}

def estPosFinale():Boolean = {
  if(getX()==getMondeLargeur() && getY()==getMondeHauteur){
    return true
  }
  else{
    return false
  }
}